--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.33.0",
     "gsap": "^3.14.2",
-    "locomotive-scroll": "^5.0.1",
+    "lenis": "^1.3.17",
     "ogl": "^0.0.116",
     "postprocessing": "^6.38.2",
     "react": "^19.2.0",
